finished register tools methods